Refactoring into h and cpp files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,5 @@ get_target_property(JSON_INC_PATH jsoncpp_lib INTERFACE_INCLUDE_DIRECTORIES)
 include_directories( ${OpenCV_INCLUDE_DIRS} ${JSON_INC_PATH})
 add_executable( ${PROJECT_NAME} main.cpp )
 target_link_libraries( ${PROJECT_NAME} PUBLIC ${OpenCV_LIBS} jsoncpp_lib)
+add_library(cellular_lib cellular.cpp)
+target_link_libraries(${PROJECT_NAME} PUBLIC cellular_lib)
